# WrapCapPDF

./: README.md  pyproject.toml
examples/: pdf_example.py
src/WrapCapPDF/: __init__.py  pdf_extractor.py
